--- a/public/css/global.css
+++ b/public/css/global.css
@@ -21,7 +21,7 @@ h2 {
     /* Font */
     font-family: var(--txt0);
     font-style: normal;
-    font-weight: 400;
+    font-weight: 600;
     font-size: var(--h2);
 
     /* Color */
@@ -205,9 +205,32 @@ footer {
         line-height: calc(var(--pm) * 1.3);
     }
 
+    th {
+        /* Font */
+        font-weight: 600;
+        font-size: calc(var(--pm) * 0.5);
+    }
+
     /* Body */
     body {
         /* Transform */
         max-width: 100vw;
+    }
+    
+    footer {
+        /* Font */
+        font-size: 12pt;
+
+        /* Transform */
+        min-width: 50vw;
+        padding: 7pt 0 2pt 0;
+
+        /* Border */
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+    }
+    
+    body {
+        overflow-x: hidden;
     }
 }
