--- a/public/css/content/projects.css
+++ b/public/css/content/projects.css
@@ -67,3 +67,10 @@
     z-index: 100;
     transform: translateY(330px);
 }
+
+@media only screen and (max-width: 1280px) and (max-height: 2560px) {
+    #Gallery {
+        /* Display */
+        display: block;
+    }
+}
