--- a/public/css/content/contact.css
+++ b/public/css/content/contact.css
@@ -100,6 +100,13 @@
     border-radius: 30px;
     
     overflow: hidden;
+
+    transition: transform var(--anim0) ease;
+}
+
+.contactMediaIcon:hover {
+    /* Transform */
+    transform: scale(1.15);
 }
 
 .contactMediaIcon path {
