Hover Animations And Parallax Stuff 	modified:   public/css/content/about.css 	modified:   public/css/content/contact.css 	modified:   public/css/global.css 	modified:   public/css/root.css 	modified:   public/index.html 	modified:   rollup.config.js 	modified:   src/App.svelte 	modified:   src/Burger.svelte 	modified:   src/Figure.svelte 	new file:   src/Parallax.svelte 	modified:   src/Slider.svelte 	modified:   src/english/English.svelte

--- a/public/css/content/about.css
+++ b/public/css/content/about.css
@@ -37,6 +37,13 @@
     /* Font */
     color: var(--clr4);
     text-decoration: underline;
+    text-decoration-thickness: 1.5px;
+    
+    transition: text-decoration-color var(--anim0) linear;
+}
+
+#About .infobox a:hover {
+    text-decoration-color: transparent;
 }
 
 #About .infobox .infoboxData {
