--- a/public/css/content/contact.css
+++ b/public/css/content/contact.css
@@ -33,12 +33,14 @@
     /* Font */
     color: var(--clr4);
     text-decoration: underline;
-    text-decoration-thickness: 2.5px;
+    text-decoration-thickness: 1.5px;
+
+    transition: text-decoration-color var(--anim0) linear;
 }
 
 #ContactData a:hover {
     /* Font */
-    text-decoration: none;
+    text-decoration-color: transparent;
 }
 
 #Contact .infobox .infoboxData {
