--- a/public/css/global.css
+++ b/public/css/global.css
@@ -116,6 +116,14 @@ tr:last-child th {
     border-bottom-style: none;
 }
 
+html {
+    /* Smooth Site Scrolling */
+    scroll-behavior: smooth;
+    
+    scrollbar-color: rgba(73, 72, 70, 0.125) rgba(73, 72, 70, 0.1);
+    scrollbar-width: thin;
+}
+
 /* Main Parents */
 body {
     /* Background */
@@ -123,23 +131,29 @@ body {
 
     overflow-x: hidden;
 
+
     /* Transform */
     max-width: 100vw;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 13px;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background-color: rgba(73, 72, 70, 0.1);
     border-radius: 1em;
     margin: 8px;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: rgba(73, 72, 70, 0.125);
     border-radius: 1em;
+}
+
+hr {
+    border-width: 1px;
+    border-radius: 5px;
 }
 
 footer {
@@ -182,6 +196,13 @@ footer {
     
     /* Border */
     border-radius: 30px;
+}
+
+figure {
+    border-style: solid;
+    border-width: 1em;
+    border-radius: 15px;
+    border-color: rgba(232, 232, 219, 0.75);
 }
 
 /* ## Mobile */
